<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		tools:context="com.example.metronom.MainActivity">


		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:text="@string/manual_mode"
			android:textStyle="bold"
			android:textAllCaps="true"/>


		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:id="@+id/card_view"
			android:layout_gravity="center"
			android:layout_width="match_parent"
			android:layout_height="70dp"
			android:layout_marginTop="30dp"
			card_view:cardCornerRadius="4dp"
			card_view:cardBackgroundColor="@color/colorButton">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				style="?android:attr/buttonBarStyle"
				android:gravity="center">

				<Button
					android:id="@+id/vibration"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:paddingTop="9dp"
					style="?android:attr/borderlessButtonStyle"
					android:drawableTop="@drawable/ic_vibration_24dp"
					android:textColor="@android:color/white"
					android:text="@string/vibration"
					android:textSize="14sp"
					android:textAllCaps="true"/>
				<Button
					android:id="@+id/flash"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:paddingTop="9dp"
					style="?android:attr/borderlessButtonStyle"
					android:drawableTop="@drawable/ic_flash_on_24dp"
					android:textColor="@android:color/white"
					android:text="@string/flash"
					android:textSize="14sp"
					android:textAllCaps="true"/>
				<Button
					android:id="@+id/sound"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:paddingTop="9dp"
					style="?android:attr/borderlessButtonStyle"
					android:drawableTop="@drawable/ic_volume_up_24dp"
					android:textColor="@android:color/white"
					android:text="@string/sound"
					android:textSize="14sp"
					android:textAllCaps="true"/>

			</LinearLayout>

		</android.support.v7.widget.CardView>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/set_bpm"
			android:layout_marginTop="40dp"
			android:textAllCaps="true"/>

		<EditText
			android:id="@+id/seekbarValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="36sp"
			android:maxLines="1"
			android:singleLine="true"
			android:inputType="number"
			android:maxLength="3"
			android:background="@null"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:orientation="horizontal">

			<Button
				android:id="@+id/minusBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="0dp"
				android:minHeight="0dp"
				android:background="@null"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				android:text="@string/minus"/>

			<SeekBar
				android:id="@+id/seekbar"
				android:layout_width="0dp"
				android:layout_height="20dp"
				android:layout_weight="1"
				android:progressDrawable="@drawable/seekbar_shapes"
				android:thumb="@drawable/seekbar_thumb4"
				android:thumbOffset="15dp"/>

			<Button
				android:id="@+id/plusBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="0dp"
				android:minHeight="0dp"
				android:background="@null"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				android:text="@string/plus"/>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/indicator"
			android:textAllCaps="true"
			android:textStyle="bold"/>

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/indicatorOff"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:src="@drawable/indicator_off"/>
			<ImageView
				android:id="@+id/indicatorOn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:src="@drawable/indicator_on"
				android:alpha="0"/>
		</RelativeLayout>

		<Button
			android:id="@+id/startButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:theme="@style/ColoredButton"
			android:text="@string/start"/>

	</LinearLayout>

</ScrollView>